--- a/register.html
+++ b/register.html
@@ -1,34 +1,209 @@
-
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Styled Form</title>
+  <title>Code Immerssion Rgisteration Form</title>
   <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.css"
+    integrity="sha512-3pIirOrwegjM6erE5gPSwkUzO+3cTjpnV9lexlNZqvupR64iZBnOOTiiLPb9M36zpMScbmUNIcHUqKD47M719g=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/please-wait/0.0.5/please-wait.css"
+    integrity="sha512-LGdYsyO5vL18FjVLl4X0hpD6YfE/0GhsLu2+Z4W56CM/KlVNvfEe3BkKMFxqnSHEh2RpPF6ZoxHcisQKPbJLwQ=="
+    crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="css/pleasewait.css" rel="stylesheet" />
 </head>
+
 <body class="bg-gray-100 flex items-center justify-center min-h-screen">
   <div class="bg-white p-6 rounded-lg shadow-lg w-full max-w-md">
-    <form class="space-y-6">
+    <form class="space-y-6 ajax-contact" id="ajax-contact">
+      <div>
+        <label class="block font-semibold text-sm mb-1" for="email">First Name</label>
+        <input name="firstname" id="firstname" type="text" placeholder="First Name"
+          class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-ind" />
+      </div>
+      <div>
+        <label class="block font-semibold text-sm mb-1" for="email">Last Name</label>
+        <input name="lastname" id="lastname" type="text" placeholder="Last Name"
+          class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-ind">
+      </div>
+      <div>
+        <label class="block font-semibold text-sm mb-1" for="email">Other Name</label>
+        <input name="othername" id="othername" type="text" placeholder="Other Name"
+          class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-ind">
+      </div>
       <div>
         <label class="block font-semibold text-sm mb-1" for="email">Email address</label>
-        <input id="email" type="email" placeholder="e.g. alex@email.com" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-ind>
+        <input name="email" id="email" type="email" placeholder="e.g. alex@email.com"
+          class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-ind">
       </div>
 
       <div>
-        <label class="block font-semibold text-sm mb-1" for="password">Create password</label>
-        <input id="password" type="password" placeholder="At least 8 characters" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500">
+        <label class="block font-semibold text-sm mb-1" for="email">Do you have a personal computer</label>
+        <select name="pc" id="pc"
+          class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-ind">
+          <option value="Yes">Yes</option>
+          <option value="No">No</option>
+        </select>
       </div>
-
       <div>
-        <label class="block font-semibold text-sm mb-1" for="confirmPassword">Confirm password</label>
-        <input id="confirmPassword" type="password" placeholder="At least 8 characters" class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-indigo-500">
+        <label class="block font-semibold text-sm mb-1" for="email">Why do you want to partake in this program</label>
+        <textarea name="message" id="message" type="text" placeholder="Why do you want to partake in this program"
+          class="w-full p-3 border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-ind"> </textarea>
       </div>
 
-      <p class="text-xs text-gray-500">Password must contain at least 8 characters</p>
-
-      <button type="button" class="w-full py-3 bg-indigo-600 text-white font-semibold rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 disabled:opacity-50">Register</button>
+      <button id="btnSubmit" type="button"
+        class="w-full py-3 bg-indigo-600 text-white font-semibold rounded-lg shadow-md hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2 disabled:opacity-50">Register</button>
     </form>
   </div>
+  <script src="//code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/toastr.min.js"
+    integrity="sha512-VEd+nq25CkR676O+pLBnDW09R7VQX9Mdiij052gVCp5yVH3jGtH70Ho/UUv4mJDsEdTvqRCFZg0NKGiojGnUCw=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/please-wait/0.0.5/please-wait.min.js"
+    integrity="sha512-mEe6gLbPz5ZrXPgwBNL6KSNLjE1zvv4G31w/UdsGkaYrmFBLhGRH4iRI5SeoUppqdq/Ydn5A+ctDO2felJ8p5w=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+  <script src="js/pleasewait.js"></script>
+  <script src="js/jquery.pleasewait.js"></script>
+  <script>
+    toastr.options = {
+      "closeButton": false,
+      "debug": false,
+      "newestOnTop": false,
+      "progressBar": false,
+      "positionClass": "toast-top-right",
+      "preventDuplicates": false,
+      "onclick": null,
+      "showDuration": "300",
+      "hideDuration": "1000",
+      "timeOut": "5000",
+      "extendedTimeOut": "1000",
+      "showEasing": "swing",
+      "hideEasing": "linear",
+      "showMethod": "fadeIn",
+      "hideMethod": "fadeOut"
+    }
+
+    var $validation =
+      '[name="othername"],[name="email"],[name="firstname"],[name="pc"],[name="lastname"],[name="message"]';
+    var form = ".ajax-contact";
+    var invalidCls = "is-invalid";
+    var $email = '[name="email"]';
+
+    $.fn.serializeObject = function () {
+      var o = {};
+      var a = this.serializeArray();
+      $.each(a, function () {
+        if (o[this.name]) {
+          if (!o[this.name].push) {
+            o[this.name] = [o[this.name]];
+          }
+          o[this.name].push(this.value || '');
+        } else {
+          o[this.name] = this.value || '';
+        }
+      });
+      return o;
+    };
+
+    $(function () {
+      function validateContact() {
+        var valid = true;
+        var formInput;
+
+        function unvalid($validation) {
+          $validation = $validation.split(",");
+          for (var i = 0; i < $validation.length; i++) {
+            formInput = form + " " + $validation[i];
+            if (!$(formInput).val()) {
+              $(formInput).addClass(invalidCls);
+              valid = false;
+            } else {
+              $(formInput).removeClass(invalidCls);
+              valid = true;
+            }
+          }
+        }
+        unvalid($validation);
+
+        if (
+          !$($email).val() ||
+          !$($email)
+            .val()
+            .match(/^([\w-\.]+@([\w-]+\.)+[\w-]{2,4})?$/)
+        ) {
+          $($email).addClass(invalidCls);
+          valid = false;
+        } else {
+          $($email).removeClass(invalidCls);
+          valid = true;
+        }
+        return valid;
+      }
+
+
+      function sendContact(id) {
+        $('#ajax-contact').pleaseWait();
+        $('[name=subject').attr('disabled', false);
+        //var formData = $('#' + id).serialize();
+        //var formData = $('#' + id).formToJson();
+        var formData = $('#' + id).serializeObject();
+        console.log(formData);
+
+        $('[name=subject').attr('disabled', true);
+        var valid;
+        valid = validateContact();
+        if (valid) {
+          jQuery
+            .ajax({
+              //url: $(form).attr("action"),
+              url: 'sendmail',
+              data: JSON.stringify(formData),
+              type: "POST",
+              contentType: 'application/json',
+            })
+            .done(function (response) {
+              $('.ajax-contact').pleaseWait('stop');
+              toastr.success('registration successfully submitted');
+              // Make sure that the formMessages div has the 'success' class.
+              // Clear the form.
+              $(
+                form +
+                ' input:not([type="submit"]),' +
+                form +
+                " textarea"
+              ).val("");
+              window.location.href = '/'
+            })
+            .fail(function (data) {
+              $('.ajax-contact').pleaseWait('stop');
+              // Make sure that the formMessages div has the 'error' class.
+              // Set the message text.
+              if (data.responseText !== "") {
+                toastr.error(data.responseText);
+              } else {
+                toastr.error("Oops! An error occured and your message could not be sent.");
+              }
+            });
+        }
+      }
+
+      $(form).on("submit", function (element) {
+        element.preventDefault();
+        console.log($(this).attr('id'))
+        sendContact($(this).attr('id'));
+      });
+
+
+      $('#btnSubmit').on("click", function (element) {
+        element.preventDefault();
+        console.log($(this).attr('id'))
+        sendContact('ajax-contact');
+      });
+    })
+  </script>
 </body>
+
 </html>
